--- a/src/main/resources/templates/articles/createArticleForm.html
+++ b/src/main/resources/templates/articles/createArticleForm.html
@@ -13,6 +13,9 @@
             <label for="writer">글쓴이</label>
             <input type="text" id="writer" name="writer" placeholder="글쓴이 이름을 입력하세요">
 
+            <label for="password">비밀번호</label>
+            <input type="password" id="password" name="password" placeholder="비밀번호">
+
             <label for="content">내용</label>
             <input type="text" id="content" name="content" placeholder="내용 작성">
         </div>
