--- a/src/main/resources/templates/articles/createArticleForm.html
+++ b/src/main/resources/templates/articles/createArticleForm.html
@@ -9,15 +9,15 @@
         <div>
             <label for="title">제목</label>
             <input type="text" id="title" name="title" placeholder="제목을 입력하세요">
-
+            <br>
             <label for="writer">글쓴이</label>
             <input type="text" id="writer" name="writer" placeholder="글쓴이 이름을 입력하세요">
 
             <label for="password">비밀번호</label>
             <input type="password" id="password" name="password" placeholder="비밀번호">
-
+            <br>
             <label for="content">내용</label>
-            <input type="text" id="content" name="content" placeholder="내용 작성">
+            <input type="text" id="content" name="content" placeholder="내용 작성" cols="10">
         </div>
         <button type="submit">등록</button>
     </form>
