feat(home.html) : 로그인, 회원가입 부분 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,10 +7,11 @@
 <body>
     <h1>Home Page</h1>
     <div>
-        <button><a href="/articles/new">글 작성</a></button>
-    </div>
-    <div>
         <button><a href="/articles">자유 게시판</a></button>
+        <button>회원 게시판</button>
+        <button><a href="/login">로그인</a></button>
+        <button><a href="/join">회원가입</a></button>
     </div>
+
 </body>
 </html>
