게시글 수정을 위한 비밀번호 검증과 업데이트 부분의 매핑명 변경

--- a/src/main/resources/templates/articles/details.html
+++ b/src/main/resources/templates/articles/details.html
@@ -13,7 +13,7 @@
     <p th:text="${article.content}">
     </p>
 
-    <form th:action="|/articles/update/${article.id}|" method="post">
+    <form th:action="|/articles/validatePassword/${article.id}|" method="post">
         <div>
             <label for="password_for_update">수정 비밀번호: </label>
             <input type="password" id="password_for_update" name="password">
